# baseball-range

./: .gitignore  README.md  REPORT.md  pyproject.toml
data/: README.md
notebooks/: 01_data.py  02_model.py  03_viz.py  04_bayes.py  05_diagnostics.py  06_diagnostics_v2.py  07_validation.py
src/baseball_range/: __init__.py  bayes.py  data.py  model.py  viz.py
stan/: cf_range.stan  cf_range_update.stan  cf_range_update_v2.stan  cf_range_v2.stan
